[gd_scene load_steps=4 format=3 uid="uid://by7ea8qrovwnd"]

[ext_resource type="Script" path="res://Scripts/OptionsMenu.gd" id="1"]
[ext_resource type="FontFile" uid="uid://ce7r73x7ee1yt" path="res://Assets/Fonts/kenpixel_mini.ttf" id="3_nqxxr"]
[ext_resource type="FontVariation" uid="uid://ds2df6k5s8j30" path="res://Assets/DynamicFonts/ShopMenu_8px_FontVariation.tres" id="4_2r7kk"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 58.0
offset_bottom = 128.0

[node name="Button1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2r7kk")
theme_override_font_sizes/font_size = 8
text = "how to"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2r7kk")
theme_override_font_sizes/font_size = 8
text = "Sonidos"

[node name="Button3" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2r7kk")
theme_override_font_sizes/font_size = 8
text = " "

[node name="Reset" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.117647, 0.117647, 1)
theme_override_fonts/font = ExtResource("4_2r7kk")
theme_override_font_sizes/font_size = 8
text = "Reset"

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2r7kk")
theme_override_font_sizes/font_size = 8
text = "RETURN"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 64.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 128.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nqxxr")
tabs_visible = false

[node name="TabBar0" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/TabBar0"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("4_2r7kk")
theme_override_font_sizes/font_size = 8
text = "Ve a cazar enemigos,
cae, vuelve a levantar,
comrpa mejoras en la tienda,
repite"
autowrap_mode = 1

[node name="Tabs1" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VoiceLabel" type="Label" parent="TabContainer/Tabs1"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("4_2r7kk")
text = "Voice"

[node name="VoiceValue" type="Label" parent="TabContainer/Tabs1"]
layout_mode = 0
offset_left = 120.0
offset_top = 24.0
offset_right = 168.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("4_2r7kk")
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VoiceHSlider" type="HSlider" parent="TabContainer/Tabs1"]
layout_mode = 2
offset_left = 8.0
offset_top = 32.0
offset_right = 120.0
offset_bottom = 48.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Tabs2" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="EnemiesLockRotation" type="CheckButton" parent="TabContainer/Tabs2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("4_2r7kk")
theme_override_font_sizes/font_size = 8
action_mode = 0
text = "rolling enemies"

[node name="Tabs3" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Tabs3"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 152.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("4_2r7kk")
text = "are you sure?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TabContainer/Tabs3"]
layout_mode = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 152.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(1, 0.117647, 0.117647, 1)
theme_override_fonts/font = ExtResource("4_2r7kk")
text = "reset
settings
to defauld"

[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="value_changed" from="TabContainer/Tabs1/VoiceHSlider" to="." method="_on_voice_h_slider_value_changed"]
[connection signal="toggled" from="TabContainer/Tabs2/EnemiesLockRotation" to="." method="_on_enemies_lock_rotation_toggled"]
[connection signal="pressed" from="TabContainer/Tabs3/Button" to="." method="_on_button_pressed"]
